# SpeedCalc

./: Cargo.toml  readme.md
client/: index.html  package-lock.json  package.json
client/src/: App.vue  CalcTask.ts
client/src-tauri/: tauri.conf.json
client/src/components/: EnterButton.vue  NumButton.vue  SignButton.vue
src/: calc_task.rs  main.rs  socket.rs
