[package]
name = "speedcalc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix-web-actors = "4.2.0"
actix = "0.13.1"
rand = "0.8.5"
env_logger = "0.10.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
